# Selenium-Youtube-Scraper

./: LICENSE  README.md  pyproject.toml  scraper.py  scratch.py  trending.csv  trending.html
